--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,8 @@ header {
   width: 10vw;
   background: #373434;
   padding: 30px 0;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.38), 0 15px 12px rgba(0, 0, 0, 0.53);
+  z-index: 99999999;
 }
 @media (min-width: 320px) and (max-width: 767px) {
   /* line 1, scss/layout/_header.scss */
@@ -22,13 +24,13 @@ header {
     width: 100vw;
     bottom: 0;
     position: fixed;
-    z-index: 99999999;
     height: 50px;
     padding: 0;
+    box-shadow: 0 -5px 19px rgba(0, 0, 0, 0.33), 0 16px 16px rgba(0, 0, 0, 0.19);
   }
 }
 
-/* line 15, scss/layout/_header.scss */
+/* line 17, scss/layout/_header.scss */
 #header-position {
   display: -webkit-box;
   display: -moz-box;
@@ -48,7 +50,7 @@ header {
   bottom: 30px;
 }
 @media (min-width: 320px) and (max-width: 767px) {
-  /* line 15, scss/layout/_header.scss */
+  /* line 17, scss/layout/_header.scss */
   #header-position {
     width: 100vw;
     top: 0;
