--- a/src/css/scss/layout/_header.scss
+++ b/src/css/scss/layout/_header.scss
@@ -2,13 +2,15 @@ header {
     width:10vw;
     background: $nav-bg-color;
     padding: 30px 0;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.38), 0 15px 12px rgba(0, 0, 0, 0.53);
+    z-index: 99999999;
   @include mobile {
     width: 100vw;
     bottom: 0;
     position: fixed;
-    z-index: 99999999;
     height: 50px;
     padding: 0;
+    box-shadow: 0 -5px 19px rgba(0, 0, 0, 0.33), 0 16px 16px rgba(0, 0, 0, 0.19);
   }
 }
   
